<resources>
    <string name="app_name">Tourisme-1076-1146</string>
    <string name="title_activity_liste">ListeActivity</string>
    <string name="login_title">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="connect">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_title">Sign up</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="password_confirmation">Confirm your password</string>
    <string name="search">Search...</string>
    <string name="details">Details</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="rate_this_activity">Rate this activity</string>
    <string name="list_of_activities">List of activities</string>
    <string name="language">Language</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="required_field">Required field</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="authentication_error">Authentication error</string>
    <string name="different_passwords">Passwords are different</string>
    <string name="sign_up_error">Registration error</string>
    <string name="vote">vote</string>
    <string name="votes">votes</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="user_not_found">User not found</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="email_already_used">Email address already used</string>
    <string name="passwords_do_not_match">Passwords don\'t match</string>
</resources>