<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.fragments.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            android:hint="@string/email_address"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mdpInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            android:hint="@string/password"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:password="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/connect"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="14sp" />
    </LinearLayout>
</FrameLayout>