<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.fragments.InscriptionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_title"
            android:textAlignment="center"
            android:textColor="@color/text_1"
            android:textSize="34sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nomInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:hint="@string/name"
            android:textColorHint="@color/text_2"
            android:background="@color/background_textInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_textInput"
                android:textColor="@color/text_1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prenomInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name"
            android:textColorHint="@color/text_2"
            android:background="@color/background_textInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_textInput"
                android:textColor="@color/text_1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email_address"
            android:textColorHint="@color/text_2"
            android:background="@color/background_textInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_textInput"
                android:textColor="@color/text_1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mdp1Input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/text_2"
            android:background="@color/background_textInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_textInput"
                android:textColor="@color/text_1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mdp2Input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password_confirmation"
            android:textColorHint="@color/text_2"
            android:background="@color/background_textInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_textInput"
                android:textColor="@color/text_1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/sign_up"
            app:cornerRadius="5dp" />

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textAlignment="center"
            android:textColor="@color/link"
            android:textSize="14sp" />
    </LinearLayout>

</FrameLayout>