<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.activities.DetailActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_1"
                android:orientation="vertical"
                android:padding="20dp"
                tools:ignore="WebViewLayout">

                <WebView
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                </WebView>

                <TextView
                    android:id="@+id/titre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Titre de l'activité"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/text_1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/etoile1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_star_outline_24" />

                    <ImageView
                        android:id="@+id/etoile2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_star_outline_24" />

                    <ImageView
                        android:id="@+id/etoile3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_star_outline_24" />

                    <ImageView
                        android:id="@+id/etoile4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_star_outline_24" />

                    <ImageView
                        android:id="@+id/etoile5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_star_outline_24" />

                    <TextView
                        android:id="@+id/nbRates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="(3 votes)"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/text_2" />
                </LinearLayout>

                <TextView
                    android:id="@+id/descriptionTitre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/text_1" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/text_2" />

                <TextView
                    android:id="@+id/galerieTitre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/gallery"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/text_1" />

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    app:iss_auto_cycle="true"
                    app:iss_period="4000"
                    app:iss_delay="4000"
                    app:iss_text_align="CENTER"
                    app:iss_placeholder="@color/dark_gray"
                    app:iss_error_image="@color/purple_500"
                    app:iss_corner_radius="20"/>

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/rate_this_activity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/text_1" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/rating1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_star_outline_24" />

                    <ImageView
                        android:id="@+id/rating2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_star_outline_24" />

                    <ImageView
                        android:id="@+id/rating3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_star_outline_24" />

                    <ImageView
                        android:id="@+id/rating4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_star_outline_24" />

                    <ImageView
                        android:id="@+id/rating5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_star_outline_24" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>